Added PhpStan analyzer tool

--- a/composer.json
+++ b/composer.json
@@ -119,5 +119,8 @@
 			"system/": ["type:aurora-framework"],
 			"dev/": ["type:aurora-dev-tools"]
 		}
+	},
+	"require-dev": {
+		"phpstan/phpstan": "^1.9"
 	}
 }
